Alignment Issues in Dynamic Parameter

--- a/phresco-framework-web/src/main/webapp/themes/default/css/Helios/style.css
+++ b/phresco-framework-web/src/main/webapp/themes/default/css/Helios/style.css
@@ -475,7 +475,7 @@ html, body {
 	padding:1%;
 	position:absolute;
 	margin-top:132px;
-	z-index:1;
+	z-index:0;
 	border-top: 1px solid #d2d2d2;
 }
 
